--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "vue-template-compiler": "^2.6.14"
     },
     "dependencies": {
-        "bootstrap": "^5.1.3"
+        "bootstrap": "^5.1.3",
+        "vue-router": "^3.5.4"
     }
 }
