--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "bootstrap": "^5.1.3",
+        "vue": "^3.2.33",
         "vue-router": "^3.5.4"
     }
 }
